# chart_discovery

./: CMakeLists.txt  README.md  main.cpp
script/: chart_plot.R  create_sample.sh  plot.R  plot.sh  top_down_point_limit.R
src/: CMakeLists.txt  chart.cpp  chart.h  define.h  pip.cpp  pip.h  segment.cpp  sim.cpp  sim.h  ts.cpp  ts.h  util.cpp  util.h
test/: test_chart.cpp  test_pip.cpp  test_sim.cpp  test_ts.cpp  test_util.cpp
